# bewiseai_test_task

./: .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 2a5de252e233_add_questions.py
src/: asgi.py  config.py  db.py
src/api/: question.py  urls.py
src/manager/: __init__.py  question.py
src/models/: __init__.py  question.py
src/schema/: __init__.py  question.py
src/tasks/: __init__.py  download_question.py
